--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Artist Seeks Crowd</title>
+    <link rel="stylesheet" href="../style.css" />
+    <script src="WORDSHERE.js" type="text/javascript"></script>
   </head>
   <body>
     <header>
@@ -13,7 +15,19 @@
       <section>
         <!-- TODO: add prompts here-->
         <h2>Prompts on Digital Audience Engagement</h2>
-        <button type="button">Click</button>
+        <div class="wrapper">
+			<div class="wrapper-inner">
+				<div id="worddiv">
+					<h1 id="word" class="word">&nbsp;</h1>
+				</div>
+				<div id="descdiv">
+					<p id="desc" class="desc">&nbsp;</p>
+				</div>
+				<div class="button-wrapper">
+					<a href="#" id="genbtn" class="button">Click</a>
+				</div>
+			</div>
+		</div>
       </section>
     </main>
   </body>
