--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Artist Seeks Crowd</title>
-    <link rel="stylesheet" href="../style.css" />
-    <script src="WORDSHERE.js" type="text/javascript"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="styles.css" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet" />
+  <title>Artist Seeks Crowd</title>
+
+  <meta name="author" content="Marie Claire LeBlanc Flanagan" />
+  <meta name="description" content="DESCRIPTIONGOESHERE." />
+
+  <meta property="og:title" content="Artist Seeks Crowd" />
+  <meta property="og:description" content="DESCRIPTIONGOESHERE." />
+  <meta property="og:image" content="IMAGELINKGOESHERE.jpg" />
+  <meta property="og:url" content="https://WEBSITEGOESHERE" />
+  <meta property="og:type" content="webpage" />
+
+  <meta name="twitter:title" content="Artist Seeks Crowd" />
+  <meta name="twitter:description" content="DESCRIPTIONGOESHERE." />
+  <meta name="twitter:image" content="IMAGELINKGOESHERE.jpg" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <script>
+    window.addEventListener("load", (event) => {
+      document.body.classList.remove("preload");
+    });
+  </script>
   </head>
   <body>
     <header>
