--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   <title>Artist Seeks Crowd</title>
 
   <meta name="author" content="Marie Claire LeBlanc Flanagan" />
-  <meta name="description" content="DESCRIPTIONGOESHERE." />
+  <meta name="description" content="A playful website for prompts/provocations on digital engagement" />
 
   <meta property="og:title" content="Artist Seeks Crowd" />
-  <meta property="og:description" content="DESCRIPTIONGOESHERE." />
+  <meta property="og:description" content="A playful website for prompts/provocations on digital engagement" />
   <meta property="og:image" content="IMAGELINKGOESHERE.jpg" />
   <meta property="og:url" content="https://WEBSITEGOESHERE" />
   <meta property="og:type" content="webpage" />
 
   <meta name="twitter:title" content="Artist Seeks Crowd" />
-  <meta name="twitter:description" content="DESCRIPTIONGOESHERE." />
+  <meta name="twitter:description" content="A playful website for prompts/provocations on digital engagement" />
   <meta name="twitter:image" content="IMAGELINKGOESHERE.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
 
@@ -30,19 +30,17 @@
   <body>
     <header>
       <h1>Artist Seeks Crowd</h1>
-      <p>Knowledge Mobilization</p>
+      <p>Welcome! Generate a prompt or provocations on digital engagement below.</p>
     </header>
     <main>
       <section>
-        <!-- TODO: add prompts here-->
-        <h2>Prompts on Digital Audience Engagement</h2>
         <div class="wrapper">
 			<div class="wrapper-inner">
 				<div id="worddiv">
-					<h1 id="word" class="word">&nbsp;</h1>
+					<h1 id="word" class="word"></h1>
 				</div>
 				<div id="descdiv">
-					<p id="desc" class="desc">&nbsp;</p>
+					<p id="desc" class="desc"></p>
 				</div>
 				<div class="button-wrapper">
 					<a href="#" id="genbtn" class="button">Click</a>
