--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <meta name="twitter:description" content="A playful website for prompts/provocations on digital engagement" />
   <meta name="twitter:image" content="IMAGELINKGOESHERE.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
+	  <script src="prompts.js" type="text/javascript"></script>
+
 
   <script>
     window.addEventListener("load", (event) => {
