--- a/index.html
+++ b/index.html
@@ -2,54 +2,64 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet" />
-  <title>Artist Seeks Crowd</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <title>Artist Seeks Crowd</title>
 
-  <meta name="author" content="Marie Claire LeBlanc Flanagan" />
-  <meta name="description" content="A playful website for prompts/provocations on digital engagement" />
+    <meta name="author" content="Marie Claire LeBlanc Flanagan" />
+    <meta
+      name="description"
+      content="A playful website for prompts/provocations on digital engagement"
+    />
 
-  <meta property="og:title" content="Artist Seeks Crowd" />
-  <meta property="og:description" content="A playful website for prompts/provocations on digital engagement" />
-  <meta property="og:image" content="IMAGELINKGOESHERE.jpg" />
-  <meta property="og:url" content="https://WEBSITEGOESHERE" />
-  <meta property="og:type" content="webpage" />
+    <meta property="og:title" content="Artist Seeks Crowd" />
+    <meta
+      property="og:description"
+      content="A playful website for prompts/provocations on digital engagement"
+    />
+    <meta property="og:image" content="IMAGELINKGOESHERE.jpg" />
+    <meta property="og:url" content="https://WEBSITEGOESHERE" />
+    <meta property="og:type" content="webpage" />
 
-  <meta name="twitter:title" content="Artist Seeks Crowd" />
-  <meta name="twitter:description" content="A playful website for prompts/provocations on digital engagement" />
-  <meta name="twitter:image" content="IMAGELINKGOESHERE.jpg" />
-  <meta name="twitter:card" content="summary_large_image" />
-	  <script src="prompts.js" type="text/javascript"></script>
+    <meta name="twitter:title" content="Artist Seeks Crowd" />
+    <meta
+      name="twitter:description"
+      content="A playful website for prompts/provocations on digital engagement"
+    />
+    <meta name="twitter:image" content="IMAGELINKGOESHERE.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <script src="prompts.js" type="text/javascript"></script>
 
-
-  <script>
-    window.addEventListener("load", (event) => {
-      document.body.classList.remove("preload");
-    });
-  </script>
+    <script>
+      window.addEventListener("load", (event) => {
+        document.body.classList.remove("preload");
+      });
+    </script>
   </head>
   <body>
     <header>
       <h1>Artist Seeks Crowd</h1>
-      <p>Welcome! Generate a prompt or provocations on digital engagement below.</p>
+      <p class="subHead">
+        Looking for an audience? Find a prompt or provocation on
+        digital audience engagement.
+      </p>
     </header>
     <main>
-      <section>
         <div class="wrapper">
-			<div class="wrapper-inner">
-				<div id="worddiv">
-					<h1 id="word" class="word"></h1>
-				</div>
-				<div id="descdiv">
-					<p id="desc" class="desc"></p>
-				</div>
-				<div class="button-wrapper">
-					<a href="#" id="genbtn" class="button">Click</a>
-				</div>
-			</div>
-		</div>
-      </section>
+          <div id="worddiv">
+            <h1 id="word" class="word"></h1>
+          </div>
+          <div id="descdiv">
+            <p id="desc" class="desc"></p>
+          </div>
+          <div id="button-wrapper">
+            <a href="#" id="genbtn" class="button">Click</a>
+          </div>
+        </div>
     </main>
   </body>
 </html>
