--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
     <header>
       <h1>Artist Seeks Crowd</h1>
       <p class="subHead">
-        Looking for an audience? Find a prompt or provocation on
-        digital audience engagement.
+        <!-- Looking for an audience? Curious to try something new? -->
       </p>
     </header>
     <main>
@@ -54,12 +53,14 @@
             <h1 id="word" class="word"></h1>
           </div>
           <div id="descdiv">
-            <p id="desc" class="desc"></p>
+            <p id="desc" class="desc">Is your audience part of the story?</p>
           </div>
           <div id="button-wrapper">
-            <a href="#" id="genbtn" class="button">Click</a>
+            <a href="#" id="genbtn" class="button">More!</a>
           </div>
         </div>
     </main>
   </body>
 </html>
+
+<!-- https://docs.google.com/document/d/1UnWj567YW0f_W_zA8GW_DoYtmdryq13UVYG11KcqM_w/edit# -->
