--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <header>
       <h1>Artist Seeks Crowd</h1>
       <p class="subHead">
-        <!-- Looking for an audience? Curious to try something new? -->
+        Prompts and provocations for artists who are searching for audiences
       </p>
     </header>
     <main>
